# spectral

./: build-Spectral.py  foo.sh
Code/: .gitignore  CMakeLists.txt
Code/Ace/: Ace.cpp  Ace.h  CMakeLists.txt
Code/Aster/: AsterSignatureImporter.cpp  CMakeLists.txt
Code/Cem/: CMakeLists.txt
Code/DgFormats/: CMakeLists.txt  OptionsDgImport.cpp  OptionsDgImport.h
Code/Elm/: CMakeLists.txt  ElmCore.cpp  ElmDlg.cpp  ElmDlg.h  ElmFile.cpp
Code/Iarr/: CMakeLists.txt  Iarr.cpp  IarrDlg.cpp  IarrDlg.h
Code/Include/: SpectralVersion.h
Code/KMeans/: CMakeLists.txt  KMeans.cpp  KMeansDlg.cpp  KMeansDlg.h
Code/Landsat/: CMakeLists.txt  OptionsLandsatImport.cpp  OptionsLandsatImport.h
Code/Mnf/: CMakeLists.txt  DifferenceImageDlg.cpp  DifferenceImageDlg.h  EigenPlotDlg.cpp  EigenPlotDlg.h  Mnf.cpp  MnfDlg.cpp  MnfDlg.h  MnfInverse.cpp  StatisticsDlg.cpp  StatisticsDlg.h
Code/Ndvi/: CMakeLists.txt  NdviDlg.cpp  NdviDlg.h
Code/Plotting/: CMakeLists.txt  GetSubsetDialog.cpp  GetSubsetDialog.h  PlotSpatialProfile.cpp  PlottingManager.cpp  ProfilePlotUtilities.cpp
Code/RangeProfile/: CMakeLists.txt  RangeProfilePlotManager.cpp
Code/Resampler/: CMakeLists.txt  ResamplerOptions.cpp  ResamplerPlugIn.cpp  ResamplerPlugInDlg.cpp  ResamplerPlugInDlg.h
Code/Rx/: CMakeLists.txt  Rx.cpp  Rx.h  RxDialog.h  ui_RxDialog.h
Code/Sam/: CMakeLists.txt
Code/Signature/: CMakeLists.txt  SignatureSetExporter.cpp
Code/SignatureWindow/: CMakeLists.txt  PropertiesSignaturePlotObject.cpp  PropertiesSignaturePlotObject.h  SignaturePlotObject.cpp  SignaturePlotObject.h  SignatureWindow.cpp  SignatureWindow.h  SignatureWindowOptions.cpp
Code/SpectralLibrary/: CMakeLists.txt  SpectralLibraryDlg.cpp  SpectralLibraryDlg.h
Code/SpectralLibraryMatch/: CMakeLists.txt  LibraryEditDlg.cpp  LibraryEditDlg.h  LocateDialog.cpp  LocateDialog.h  MatchIdDlg.cpp  MatchIdDlg.h  ResultsItemModel.h  ResultsPage.cpp  ResultsPage.h  ResultsSortFilter.h  SpectralLibraryManager.cpp  SpectralLibraryMatch.cpp  SpectralLibraryMatch.h  SpectralLibraryMatchMetrics.h  SpectralLibraryMatchOptions.cpp  SpectralLibraryMatchOptions.h  SpectralLibraryMatchResults.cpp  SpectralLibraryMatchResults.h  SpectralLibraryMatchTools.cpp
Code/SpectralUtilities/: CMakeLists.txt  SpectralSignatureSelector.cpp  SpectralUtilities.cpp
Code/Tad/: CMakeLists.txt  Tad.cpp  Tad.h  TadDialog.h  ui_TadDialog.h
Code/WangBovik/: CMakeLists.txt  WangBovik.cpp  WangBovik.h
Code/cmake/Modules/: ConfigureQt5Qwt6.cmake  ConfigureQtQwt.cmake  FindOpenCv.cmake  FindQwt5ForQt4.cmake  FindQwt5ForQt5.cmake  FindQwt6ForQt5.cmake  FindTBB.cmake  Findgeotiff.cmake
Code/cmake/Templates/: BuildRevision.h  application.dox  spectral-debug.dep  spectral-release.dep  spectral.dep
Dependencies/: .gitignore
Dependencies/ivy-config/: default.properties
Installer/: .gitignore
